src/tests/snapshots/gitu__tests__branch__delete_branch_empty.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
d Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
────────────────────────────────────────────────────────────────────────────────|
! Branch name required                                                          |
styles_hash: 343b1fffa75cf86c
