src/tests/snapshots/gitu__tests__branch__delete_branch_forcefully.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d --force hi                                                      |
Deleted branch hi (was b66a0bf).                                                |
styles_hash: 5a3690c1fa3b2467
