src/tests/snapshots/gitu__tests__branch__delete_branch_selected.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: dd0c306c9b4c03e8
