src/tests/snapshots/gitu__tests__branch__delete_picker_filter.snap
---
source: src/tests/branch.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main v1.0.0 v2.0.0 origin/main add initial-file                        |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
 2/7   Delete › feat█                                                           |
▌feature-a                                                                      |
 feature-b                                                                      |
 feat                                                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: d49e1fc3270642e8
